--- a/app/views/_elements/components/page-header.haml
+++ b/app/views/_elements/components/page-header.haml
@@ -1,14 +1,16 @@
 :ruby
   text ||= nil
+  icon ||= nil
   actions ||= nil
 
 .ui-body-title
 
   .ui-body-title-label
     %h1.title-xl
+      = component("icon.#{icon}")
       = text
 
-  - if actions && actions.is_a?(Enumerable)
+  - if actions.is_a?(Enumerable)
     .ui-body-title-actions
       - actions.each do |btn|
         = btn
