--- a/app/views/styleguide/06_Icons/_2_icon-privacy.html.haml
+++ b/app/views/styleguide/06_Icons/_2_icon-privacy.html.haml
@@ -1,8 +1,8 @@
 :ruby
   element = {
-    name: 'Privacy Icons', todo: true,
+    name: 'Privacy Icons',
     cssFile: '_icons.scss',
-    cssSelector: '.icon-privacy-',
+    cssSelector: '.icon-privacy-{name}',
     description: 'By default, icons inherit font colour from their parent. A few modifier classes are provided to alter icon\'s colour when needed.',
     section: '6.2',
     mods: {
