--- a/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
+++ b/app/views/styleguide/06_Icons/_6_icon-header-nav.html.haml
@@ -1,8 +1,8 @@
 :ruby
   element = {
-    name: 'Header Nav Icons', todo: true,
+    name: 'Header Nav Icons',
     cssFile: '_icons.scss',
-    cssSelector: '.icon-',
+    cssSelector: '.icon-{name}',
     section: '6.6',
     mods: {
       nil => 'Default',
