--- a/app/views/styleguide/06_Icons/_3_icon-vis.html.haml
+++ b/app/views/styleguide/06_Icons/_3_icon-vis.html.haml
@@ -1,8 +1,8 @@
 :ruby
   element = {
-    name: 'Visualization Mode Icons', todo: true,
+    name: 'Visualization Mode Icons',
     cssFile: '_icons.scss',
-    cssSelector: '.icon-vis-',
+    cssSelector: '.icon-vis-{name}',
     description: 'By default, icons inherit font colour from their parent. A few modifier classes are provided to alter icon\'s colour when needed.',
     section: '6.3',
     mods: {
