--- a/app/views/styleguide/06_Icons/_4_icon-other.html.haml
+++ b/app/views/styleguide/06_Icons/_4_icon-other.html.haml
@@ -1,18 +1,10 @@
 :ruby
   element = {
-    name: 'Other Icons', todo: true,
+    name: 'Other Icons',
     cssFile: '_icons.scss',
-    cssSelector: 'icon-',
+    cssSelector: '.icon-{name}',
     description: 'By default, icons inherit font colour from their parent. A few modifier classes are provided to alter icon\'s colour when needed.',
     section: '6.4',
-    # TODO: find pattern for this:
-    subElements: [ 'madek', 'pen', 'cog', 'filter', 'plus', 'plus-small',
-      'upload', 'dload', 'checkmark', 'lock', 'eye', 'move', 'cover', 'set',
-      'media-entry', 'tag', 'tags', 'trash', 'user', 'add-user', 'add-group',
-      'admin', 'home', 'power-off', 'lens', 'magnifier', 'highlight', 'star',
-      'clipboard', 'question-mark', 'question', 'bang', 'close', 'copy',
-      'contrast', 'undo', 'catalog', 'link', 'api', 'library'
-    ],
     mods: {
       nil => 'Default',
       'bright' => 'White variation',
@@ -21,9 +13,17 @@
     }
   }
 
+  list = [ 'madek', 'pen', 'cog', 'filter', 'plus', 'plus-small',
+    'upload', 'dload', 'checkmark', 'lock', 'eye', 'move', 'cover', 'set',
+    'media-entry', 'tag', 'tags', 'trash', 'user', 'add-user', 'add-group',
+    'admin', 'home', 'power-off', 'lens', 'magnifier', 'highlight', 'star',
+    'clipboard', 'question-mark', 'question', 'bang', 'close', 'copy',
+    'contrast', 'undo', 'catalog', 'link', 'api', 'library'
+  ]
+
 = partial('element', element) do
   - element[:mods].each do |mod, description|
     = partial('example', { mod: mod}) do
 
-      - element[:subElements].each do |sub|
-        %i{class: "icon-#{sub} #{mod.to_s}"}
+      - list.each do |sub_element|
+        = component("icon.#{sub_element}", mod)
