--- a/app/views/styleguide/06_Icons/_8_icon-by-content.html.haml
+++ b/app/views/styleguide/06_Icons/_8_icon-by-content.html.haml
@@ -1,36 +1,36 @@
 :ruby
   element = {
-    name: '"Content Type" Icons in Page Headers', todo: true,
+    name: '"Content Type" Icons in Page Headers',
     cssFile: '_icons.scss',
-    cssSelector: '.icon-',
+    cssSelector: '.icon-{name}',
     description: 'Icons are used in Page Headers to indicate the type of content presented. \nBelow is a list of all such pages and their corresponding icons.',
-    section: '6.8',
+    section: '6.8'
   }
 
   list = [
-    ['icon-media-entry', 'Title of an Entry'],
-    ['icon-set', 'Title of a Set'],
-    ['icon-filter-set', 'Title of a Filter-Set'],
-    ['icon-home', 'Mein Archiv'],
-    ['icon-privacy-private-alt', 'Inhalte, für die ich verantwortlich bin'],
-    ['icon-upload', 'Meine letzten Importe'],
-    ['icon-star', 'Meine Favoriten'],
-    ['icon-tag', 'Meine Schlagworte'],
-    ['icon-privacy-group-alt', 'Mir anvertraute Inhalte'],
-    ['icon-privacy-group', 'Meine Arbeitsgruppen'],
-    ['icon-tags', 'Vokabulare'],
-    ['icon-catalog', 'Erkunden'],
-    ['icon-catalog', 'Erkunden / Katalog'],
-    ['icon-set', 'Erkunden / Beispielhafte-Sets'],
-    ['icon-tag', 'Erkunden / Häufige Schlagworte'],
-    ['icon-lens', 'Suche'],
-    ['icon-library', 'Medienarchiv'],
-    ['icon-pen', 'Metadaten editieren'],
-    ['icon-lock', 'Berechtigungen von "Foobar"'],
-    ['icon-link', 'Adressen für "Foobar"'],
-    ['icon-vis-graph', 'Visualisiertes Set'],
-    ['icon-eye', 'Nach vergleichbaren Inhalten stöbern'],
-    ['icon-upload', 'Import Media']
+    ['media-entry', 'Title of an Entry'],
+    ['set', 'Title of a Set'],
+    ['filter-set', 'Title of a Filter-Set'],
+    ['home', 'Mein Archiv'],
+    ['privacy-private-alt', 'Inhalte, für die ich verantwortlich bin'],
+    ['upload', 'Meine letzten Importe'],
+    ['star', 'Meine Favoriten'],
+    ['tag', 'Meine Schlagworte'],
+    ['privacy-group-alt', 'Mir anvertraute Inhalte'],
+    ['privacy-group', 'Meine Arbeitsgruppen'],
+    ['tags', 'Vokabulare'],
+    ['catalog', 'Erkunden'],
+    ['catalog', 'Erkunden / Katalog'],
+    ['set', 'Erkunden / Beispielhafte-Sets'],
+    ['tag', 'Erkunden / Häufige Schlagworte'],
+    ['lens', 'Suche'],
+    ['library', 'Medienarchiv'],
+    ['pen', 'Metadaten editieren'],
+    ['lock', 'Berechtigungen von "Foobar"'],
+    ['link', 'Adressen für "Foobar"'],
+    ['vis-graph', 'Visualisiertes Set'],
+    ['eye', 'Nach vergleichbaren Inhalten stöbern'],
+    ['upload', 'Import Media']
   ]
 
 
@@ -38,8 +38,4 @@
   - list.each do |name, text|
     = partial('example') do
 
-      .ui-body-title
-        .ui-body-title-label
-          %h1.title-xl
-            %i{class: name}
-            = text
+      = component('page-header', text: text, icon: name)
