--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -3,9 +3,11 @@
 %div= @latest_media_entries.to_json
 
 %h3= 'Latest collections'
+%div= link_to 'show all', collections_path(latest: true)
 = @latest_collections.to_json
 
 %h3= 'Latest filter sets'
+%div= link_to 'show all', filter_sets_path(latest: true)
 = @latest_filter_sets.to_json
 
 %h3= 'Latest imports'
@@ -17,9 +19,11 @@
 = @favorite_media_entries.to_json
 
 %h3= 'Favorite collections'
+%div= link_to 'show all', collections_path(favorite: true)
 = @favorite_collections.to_json
 
 %h3= 'Favorite filter sets'
+%div= link_to 'show all', filter_sets_path(favorite: true)
 = @favorite_filter_sets.to_json
 
 %h3= 'Entrusted media entries'
@@ -27,9 +31,11 @@
 = @entrusted_media_entries.to_json
 
 %h3= 'Entrusted collections'
+%div= link_to 'show all', collections_path(entrusted: true)
 = @entrusted_collections.to_json
 
 %h3= 'Entrusted filter sets'
+%div= link_to 'show all', filter_sets_path(entrusted: true)
 = @entrusted_filter_sets.to_json
 
 %h3= 'Groups'
