--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -17,15 +17,8 @@
   .ui-resource-extension,
   .ui-resource-description
     display: none
-  .ui-thumbnail.media-entry,
-  .ui-thumbnail.media-set,
-  .ui-thumbnail.filter-set
+  .ui-thumbnail
     +dimension(140px, 220px)
-    margin: 0
-    padding: 15px
-    position: relative
-  .ui-thumbnail.media-entry-incomplete
-    +dimension(140px, 140px)
     margin: 0
     padding: 15px
     position: relative
@@ -76,7 +69,7 @@
     display: block
   .ui-thumbnail.video .ui-thumbnail-image-wrapper
     background: $white image-url("backgrounds/thumb-video-backg.png") 0 0px no-repeat
-  
+
   // Show / Hide on hover
   .ui-thumbnail:hover
     .ui-thumbnail-actions
@@ -86,7 +79,7 @@
     .ui-thumbnail-level-up-items,
     .ui-thumbnail-level-down-items
       display: block
-      
+
   // Hover and active states styles (backgrounds, shadows and such)
   // most have background, shadow, no border-radius:
   .ui-thumbnail:hover
