--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,12 +1,27 @@
+:ruby
+  footer = {
+    copy: {
+      logo: {
+        href: 'http://madek.zhdk.ch',
+        content: component('icon.madek', 'ui-footer-logo')
+      },
+      text: "Zürcher Hochschule der Künste and contributors"
+    },
+    version: "TODO: semver"
+  }
+
 - content_for(:body) do
   %body
 
-    #app{data: { view: request[:controller], action: request[:action] }}
+    #app.app{data: { view: request[:controller], action: request[:action] }}
 
       = render('application/app_header')
 
       = render('application/app_alerts')
 
       = yield
+
+      .app-footer-push
+  = combo('footer', footer)
 
 = render template: 'layouts/_base'
