presenters: ui and views
- ui: apppartials -> decorators, use @get, doc, lint
- views/controllers: rename @presenter -> @get
 - presenter: add UserDashboard, use in view
- ui: 'metadata-box'
- introduce ui-partials, move polystuff there. partials are app-specific UI elements that expect a 'presenter' object
- polybox: add meta to thumbnail (CSS hack)
- show: containers, overview, polybox with subheadings
- fix alerts, user_menu, page-header
- app: collection: show: @presenter -> polybox
- assets: add dev_todo.png
- lint and cleanup

--- a/app/views/_elements/components/page-header.haml
+++ b/app/views/_elements/components/page-header.haml
@@ -7,7 +7,7 @@
 
   .ui-body-title-label
     %h1.title-xl
-      = component("icon.#{icon}")
+      = icon
       = text
 
   - if actions.is_a?(Enumerable)
