--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,9 +5,9 @@
         href: 'http://madek.zhdk.ch',
         content: component('icon.madek', 'ui-footer-logo')
       },
-      text: "Zürcher Hochschule der Künste and contributors"
+      text: 'Zürcher Hochschule der Künste and contributors'
     },
-    version: "TODO: semver"
+    version: 'TODO: semver'
   }
 
 - content_for(:body) do
