--- a/app/views/_elements/combos/resources-header.haml
+++ b/app/views/_elements/combos/resources-header.haml
@@ -11,7 +11,7 @@
   = filter_bar
 
   - if link
-    %a.strong{:href => link[:href]}= link[:text]
+    %a.strong{href: link[:href]}= link[:text]
 
   - if text
     %p.paragraph-l.ui-resources-intro
