--- a/app/views/application/_user_menu.haml
+++ b/app/views/application/_user_menu.haml
@@ -11,7 +11,7 @@
 
   = component('dropdown', dropdown) # TODO: (see component)
 
-= form_tag 'session/sign_out' do
+= form_tag '/session/sign_out' do
   = component('button.tertiary') do
     = component('icon.power-off')
     = 'Log Out'
