--- a/app/views/styleguide/07_Components/_06_page-header.html.haml
+++ b/app/views/styleguide/07_Components/_06_page-header.html.haml
@@ -7,6 +7,7 @@
     # example
     locals: {
       text: 'Page header that could possibly go onto two lines but will not because of the overlay.',
+      # icon: component("icon.set"),
       actions: [
         component('button.primary', {text: 'Primary button', href: '#'}),
         component('button', {text: 'Secondary button', href: '#'})
