ui: resources: actions bar: text fixes, switch delete button with organize
delivers [#84479234]

commit c0e14051e2e1ca6896542703e663be477c622da6
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:53:40 2015 +0100

    zu Set hinzufügen dafür aus dem Menü rausnehmen

commit 8319b07f2f4387937f2533038a961dd98c5e98ee
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:34:43 2015 +0100

    löschen wieder ins Menü. nach unten unter Strich

commit c498058fc72e6fd3ed31dc9d54767a167cdb4900
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:28:40 2015 +0100

    Titelbild setzen

commit 2a6b2fca3a8901e04540a37e1800b74fe830cea1
Author: Max F. Albrecht <1@178.is>
Date:   Sat Jan 31 20:26:33 2015 +0100

    "Adressen anzeigen"

--- a/app/views/filter_sets/_actions.html.haml
+++ b/app/views/filter_sets/_actions.html.haml
@@ -7,17 +7,16 @@
   @can_delete= current_user.authorized?(:delete, @filter_set)
 
 .ui-body-title-actions
-  
+
   - unless @is_guest
     = render "media_resources/actions/clipboard_toggle"
     = render "media_resources/actions/favor_toggle", media_resource: @filter_set
     %span.action-separator
-  
+
   - if @can_edit
     = render "media_resources/actions/edit", media_resource: @filter_set
-
-  - if @can_delete
-    = render "media_resources/actions/delete"
+  - unless @is_guest
+    = render "media_resources/actions/organize"
 
   .dropdown.ui-dropdown.stick-right
     %a#resource-action-button.button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
@@ -30,9 +29,11 @@
 
       - unless @is_guest
         = render "media_resources/actions/permissions", media_resource: @filter_set
-        = render "media_resources/actions/organize"
 
         %li.separator
 
       = render "media_resources/actions/urls", media_resource: @filter_set
 
+      - if @can_delete
+        %li.separator
+          = render :partial => "media_resources/actions/delete"
