--- a/app/views/media_resources/actions/_delete.html.haml
+++ b/app/views/media_resources/actions/_delete.html.haml
@@ -1,2 +1,4 @@
-%a.button{"data-delete-action" => true, title: _("Delete")}
-  %i.icon-trash
+%li.ui-drop-item
+  %a{:title => _("Delete"), :"data-delete-action" => true}
+    %i.icon-trash.mid
+    = _("Delete")
