--- a/app/views/media_resources/actions/_organize.html.haml
+++ b/app/views/media_resources/actions/_organize.html.haml
@@ -1,4 +1,2 @@
-%li.ui-drop-item
-  %a{:"data-organize-arcs" => true}
-    %i.icon-move.mid
-    = _("Add to/remove from set")
+%a.button{:"data-organize-arcs" => true, title: _("Add to/remove from set")}
+  %i.icon-move
