--- a/app/views/media_sets/actions/_cover.html.haml
+++ b/app/views/media_sets/actions/_cover.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
   %a#ui-select-cover{:title => _("Specify cover image for set")}
     %i.icon-cover.mid
-    = _("Cover image")
+    = _("Set Cover image")
